# GRPO

./: .gitignore  README.md  pyproject.toml
config/accelerate_configs/: fsdp2.yaml  fsdp_full_shard.yaml  fsdp_grad_op_shard.yaml  multi_gpu.yaml  multi_node.yaml
config/deepspeed/: deepspeed_zero2.yaml  deepspeed_zero2_offparam.yaml
dataset/multi_ref_image/: prepare.py
dataset/pickscore/: train.txt
dataset/sage_grpo/: test.txt
dataset/sharegpt4o_image_mini/: download.sh  test.jsonl  train.jsonl
dataset/sudoku/: generate_dataset.py  test.jsonl  train.jsonl
dataset/t2is/: test.jsonl
dataset/t2is_neg/: test.jsonl
dataset/vid_prompt/: test.txt  train.txt
examples/: README.md
examples/template/sd3_5/: async_reward.yaml
guidance/: algorithms.md  new_model.md  rewards.md  workflow.md
inference/: example_full.py  example_lora.py
multinode_examples/: README.md  fsdp2_wan.yaml  launch_multinode.sh  train.yaml
reward_server/: example_server.py
scripts/: eval_qwen3vl_rewardbench.py  qwen3vl_reward_server.py  start_qwen3vl_reward_server.sh  start_vllm_rational_reward.sh
src/flow_factory/: __init__.py  cli.py  train.py
src/flow_factory/advantage/: __init__.py  advantage_processor.py
src/flow_factory/data_utils/: dataset.py  loader.py  sampler.py  sampler_loader.py
src/flow_factory/ema/: __init__.py  ema.py  ema_utils.py
src/flow_factory/hparams/: __init__.py  abc.py  args.py  data_args.py  log_args.py  model_args.py  reward_args.py  scheduler_args.py  training_args.py
src/flow_factory/logger/: __init__.py  abc.py  formatting.py  loader.py  registry.py  swanlab.py  tensorboard.py  wandb.py
src/flow_factory/models/: __init__.py  abc.py  loader.py  registry.py
src/flow_factory/rewards/: __init__.py  abc.py  clap.py  clip.py  imagebind_reward.py  loader.py  my_reward.py  my_reward_remote.py  ocr.py  pick_score.py  qwen3vl_video.py  rational_rewards_edit.py  rational_rewards_t2i.py  registry.py  reward_processor.py  videoalign.py  vllm_evaluate.py
src/flow_factory/samples/: __init__.py  samples.py
src/flow_factory/utils/: base.py  (+11 more)
(+90 files in other folders)
